<resources>
    <string name="app_name">barterapp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="loginbtn">LOGIN</string>
    <string name="logoutbtn">Logout</string>
    <string name="regbtn">Register Button</string>
    <string name="regibtn">REGISTER</string>
    <string name="or">OR</string>
    <string name="forgotpass">Forgot Password?</string>
    <string name="usertitle">Username</string>
    <string name="passtitle">Password</string>
    <string name="noaccount">Don\'t Have an Account?</string>
    <string name="emptyField">This field is empty</string>
    <string name="emailError">This email is invalid</string>


    <string name="title_activity_post_listings">Quick Cash</string>
    <string name="place_holder_title">Place holder title</string>
    <string name="_12_34">12.34</string>
    <string name="add_picture_image">Add picture image</string>
    <string name="user_stats">User Stats</string>
    <string name="trade_history">Trade History</string>
    <string name="user_name">User Name</string>
    <string name="member_since_00_jan_2000">Member Since: 00 Jan 2000</string>
    <string name="technology">Technology</string>
    <string name="clothing">Clothing</string>
    <string name="furnishings">Furnishings</string>
    <string name="sporting_goods">Sporting Goods</string>
    <string name="frequency_of_trade_categories">Frequency of Trade Categories (%):</string>
    <string name="technology_graph">Technology</string>
    <string name="clothing_graph">Clothing</string>
    <string name="furnishings_graph">Furnishings</string>
    <string name="sporting_goods_graph">Sporting Goods</string>
    <string name="zero">0</string>
</resources>