<?xml version="1.0" encoding="utf-8"?>
<resources>
<!--    <item name="statusLabel" type="id">String</item>-->
    <item name="btn" type="id"/>
    <item name="btn_id" type="id"/>
</resources>